core refactor and some improvements